Corregido codigo redundante al actualizar status de space a Occupied y cambiado .collect(Collectors.toList()) a .toList()